--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   english_words: ^4.0.0
   provider: ^6.0.0
+  dio: ^5.4.3+1
 
 
   # The following adds the Cupertino Icons font to your application.
