--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,15 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   dio: ^5.4.3+1
-
+  equatable: ^2.0.0
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  flutter_bloc: ^8.1.6
+  shared_preferences: ^2.2.3
+  fluttertoast: ^8.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,6 +52,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
