--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   shared_preferences: ^2.2.3
   fluttertoast: ^8.2.1
+  underline_indicator: ^0.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
