--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.6
   shared_preferences: ^2.2.3
-  fluttertoast: ^8.2.1
+#  fluttertoast: ^8.2.1
   underline_indicator: ^0.0.4
+  card_swiper : ^3.0.0
+  flutter_statusbarcolor_ns: ^0.5.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
