--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   underline_indicator: ^0.0.4
   card_swiper : ^3.0.0
   flutter_statusbarcolor_ns: ^0.5.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
